--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "jquery": "~2.1.1"
   },
   "devDependencies": {
-    "angular-local-storage": "~0.0.7"
+    "angular-local-storage": "~0.0.7",
+    "angular-nsv-stringformat": "~1.0.0",
+    "angular-mocks": "~1.2.25"
   }
 }
