--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-svgstore": "^0.5.0",
     "karma": "^0.12.23",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4"
