--- a/bower.json
+++ b/bower.json
@@ -16,13 +16,13 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "angular": "~1.2.23",
-    "jquery": "~2.1.1"
-  },
   "devDependencies": {
+    "angular": "~1.4.5",
+    "jquery": "~2.1.1",
     "angular-local-storage": "^0.0.7",
+    "angular-mocks": "^1.2.25",
     "angular-nsv-stringformat": "^1.0.0",
-    "angular-mocks": "^1.2.25"
+    "angular-textarea-fit": "~1.0.0",
+    "lodash": "~3.10.1"
   }
 }
