--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,8 @@
     "angular-nsv-stringformat": "^1.0.0",
     "angular-textarea-fit": "~1.0.0",
     "lodash": "~3.10.1"
+  },
+  "resolutions": {
+    "angular": "1.5.0"
   }
 }
