--- a/bower.json
+++ b/bower.json
@@ -16,16 +16,14 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-    "angular": "~1.4.5",
+  "dependencies": {
+    "angular": "~1.5.0",
     "jquery": "~2.1.1",
     "angular-local-storage": "^0.0.7",
-    "angular-mocks": "^1.2.25",
+    "angular-mocks": "~1.5.0",
     "angular-nsv-stringformat": "^1.0.0",
     "angular-textarea-fit": "~1.0.0",
-    "lodash": "~3.10.1"
-  },
-  "resolutions": {
-    "angular": "1.5.0"
+    "lodash": "~3.10.1",
+    "angular-route": "~1.5.0"
   }
 }
