--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "cabocabo",
   "version": "0.1.0",
   "devDependencies": {
+    "angular-route": "^1.5.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-jshint": "^0.12.0",
     "grunt-serve": "^0.1.6",
     "grunt-svgstore": "^0.5.0",
-    "karma": "^0.12.23",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0"
   }
 }
