--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.12.0",
+    "grunt-jscs": "^2.7.0",
     "grunt-serve": "^0.1.6",
     "grunt-svgstore": "^0.5.0",
     "karma": "^0.13.19",
