--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-nsv-stringformat": "^1.0.0",
     "angular-textarea-fit": "~1.0.0",
     "lodash": "~3.10.1",
-    "angular-route": "~1.5.0"
+    "angular-route": "~1.5.0",
+    "pure": "~0.6.0"
   }
 }
