--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-jshint": "^0.12.0",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-jscs": "^2.7.0",
     "grunt-serve": "^0.1.6",
     "grunt-svgstore": "^0.5.0",
