--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "angular-route": "^1.5.0",
     "grunt": "^0.4.5",
+    "grunt-build-control": "^0.6.2",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.2",
